# ztfparsnip

./: .gitignore  LICENSE  README.md  config.yaml  generate.py  main.py  pyproject.toml  split_sample.py
.github/workflows/: ci.yaml
tests/: test_noisification.py
ztfparsnip/: create.py  io.py  noisify.py  plot.py  train.py
