[tool.poetry]
name = "ztfparsnip"
version = "0.1.0"
description = ""
authors = ["simeonreusch <simeon.reusch@desy.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
astro-parsnip = "^1.3.1"
pandas = "^1.5.2"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
