[tool.poetry]
name = "ztfparsnip"
version = "0.2.2"
description = "Generate noisified lightcurves based on the BTS sample and retrain Parsnip with these."
authors = ["Simeon Reusch <simeon.reusch@desy.de>", "Alice Townsend <alice.townsend@hu-berlin.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
astro-parsnip = "^1.3.1"
pandas = "^1.5.2"
numpy = "^1.24.0"
h5py = "^3.7.0"
pandas-stubs = "^1.5.2.230105"
tqdm = "^4.64.1"
seaborn = "^0.12.2"
types-pyyaml = "^6.0.12.8"
tqdm-stubs = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
coveralls = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ztftrain = "main:run"

[tool.black]
line-length = 88